--- a/.classpath
+++ b/.classpath
@@ -8,5 +8,6 @@
 	<classpathentry exported="true" kind="lib" path="libs/google-play-services.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/ormlite-android-4.45.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/ormlite-core-4.45.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/android-support-v4.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
