--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.alvarosantisteban.berlincurator"
+    package="com.alvarosantisteban.pathos"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -9,10 +9,10 @@
         android:targetSdkVersion="18" />
 
     <permission
-        android:name="com.alvarosantisteban.berlincurator.permission.MAPS_RECEIVE"
+        android:name="com.alvarosantisteban.pathos.permission.MAPS_RECEIVE"
         android:protectionLevel="signature" />
 
-    <uses-permission android:name="com.alvarosantisteban.berlincurator.permission.MAPS_RECEIVE" />
+    <uses-permission android:name="com.alvarosantisteban.pathos.permission.MAPS_RECEIVE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -26,16 +26,17 @@
 
     <application
         android:allowBackup="true"
+        android:debuggable="true"
         
         android:icon="@drawable/ic_launcher_pathos"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.alvarosantisteban.berlincurator.FirstTimeActivity"
+            android:name="com.alvarosantisteban.pathos.FirstTimeActivity"
             android:label="@string/app_name" >
         </activity>
         <activity
-            android:name="com.alvarosantisteban.berlincurator.DateActivity"
+            android:name="com.alvarosantisteban.pathos.DateActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -44,36 +45,36 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.alvarosantisteban.berlincurator.EventActivity"
+            android:name="com.alvarosantisteban.pathos.EventActivity"
             android:label="@string/title_activity_event" >
         </activity>
         <activity
-            android:name="com.alvarosantisteban.berlincurator.CalendarActivity"
+            android:name="com.alvarosantisteban.pathos.CalendarActivity"
             android:label="@string/title_activity_calendar" >
         </activity>
         <activity
-            android:name="com.alvarosantisteban.berlincurator.FakeCalendarActivity"
+            android:name="com.alvarosantisteban.pathos.FakeCalendarActivity"
             android:label="@string/title_activity_calendar" >
         </activity>
         <activity
-            android:name="com.alvarosantisteban.berlincurator.preferences.SettingsActivity"
+            android:name="com.alvarosantisteban.pathos.preferences.SettingsActivity"
             android:label="@string/title_activity_settings" >
         </activity>
         <activity
-            android:name="com.alvarosantisteban.berlincurator.preferences.AboutActivity"
+            android:name="com.alvarosantisteban.pathos.preferences.AboutActivity"
             android:label="@string/title_activity_about" >
         </activity>
         <activity
-            android:name="com.alvarosantisteban.berlincurator.preferences.LegalNoticesActivity"
+            android:name="com.alvarosantisteban.pathos.preferences.LegalNoticesActivity"
             android:label="@string/title_activity_legal_notices" >
         </activity>
         <activity
-            android:name="com.alvarosantisteban.berlincurator.preferences.ManifestoActivity"
+            android:name="com.alvarosantisteban.pathos.preferences.ManifestoActivity"
             android:label="@string/title_activity_manifesto" >
         </activity>
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyBu5GNhAdUZzy3YWPdUcmbZnPC58m1Grto" />
+            android:value="AIzaSyACUudAyzwqQr_j2QVGzG1ihyESsJdVnHw" />
 
     </application>
 
