--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -27,7 +27,6 @@
     <application
         android:allowBackup="true"
         android:debuggable="true"
-        
         android:icon="@drawable/ic_launcher_pathos"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
@@ -72,10 +71,16 @@
             android:name="com.alvarosantisteban.pathos.preferences.ManifestoActivity"
             android:label="@string/title_activity_manifesto" >
         </activity>
+        <activity
+            android:name="com.alvarosantisteban.pathos.preferences.KnownIssuesActivity"
+            android:label="@string/title_activity_known_issues" >
+        </activity>
+
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyACUudAyzwqQr_j2QVGzG1ihyESsJdVnHw" />
 
+        
     </application>
 
 </manifest>
