--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -26,7 +26,6 @@
 
     <application
         android:allowBackup="true"
-        android:debuggable="true"
         android:icon="@drawable/ic_launcher_pathos"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
@@ -75,10 +74,23 @@
             android:name="com.alvarosantisteban.pathos.preferences.KnownIssuesActivity"
             android:label="@string/title_activity_known_issues" >
         </activity>
-
+        
+        <activity
+            android:name="com.alvarosantisteban.pathos.MapActivity"
+            android:label="@string/title_activity_map" >
+        </activity>
+        
+        <!-- KEY FOR DEBUG MODE -->
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyACUudAyzwqQr_j2QVGzG1ihyESsJdVnHw" />
+
+        <!--  KEY FOR RELEASE MODE
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyAqTU5eBds-ea5lI_-_h7rF4vowT_1RESI" />
+        
+         -->
 
         
     </application>
