--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.alvarosantisteban.pathos"
-    android:versionCode="2"
-    android:versionName="1.5" >
-
-    <uses-sdk
-        android:minSdkVersion="10"
-        android:targetSdkVersion="19" />
+    package="com.alvarosantisteban.pathos">
 
     <permission
         android:name="com.alvarosantisteban.pathos.permission.MAPS_RECEIVE"
