--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,5 +58,7 @@ dependencies {
     compile 'com.google.android.gms:play-services:7.0.0'
     compile 'com.j256.ormlite:ormlite-android:4.48'
     compile 'com.j256.ormlite:ormlite-core:4.48'
+    testCompile 'junit:junit:4.12'
+    testCompile "org.mockito:mockito-core:1.9.5"
 }
 }
